--- a/Project1_3/index.html
+++ b/Project1_3/index.html
@@ -5,7 +5,7 @@
             <h1> Selena's Landing Page</h1>
             <h4> Project 1</h4>
             <p>
-                <a href="html/index.html"> HTML + CSS </a>
+                <a href="Project1/index.html"> HTML + CSS </a>
             </p>
         </body>
     
