--- a/Project1_3/html/index.html
+++ b/Project1_3/html/index.html
@@ -1,7 +1,7 @@
 <! DOCTYPE html>
 <head>
     
-<link rel="stylesheet" href="assets/style.css">
+<link rel="stylesheet" type="text/css" href="assets/style.css">
 <link rel="stylesheet" href="https://use.typekit.net/xug7kxi.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="assets/jquery.cycle2.min.js"></script>
