--- a/Project2_2/page1.html
+++ b/Project2_2/page1.html
@@ -15,7 +15,7 @@
         
         <div class="Subheader">
             <h2>
-                Click the diploma to explore the benefits and option of getting a college degree. Click the pathway to return to the previous page
+                Click the diploma to explore the benefits of getting a college degree
             </h2>
         </div>
     
