--- a/Project2_2_Wireframe/template5.html
+++ b/Project2_2_Wireframe/template5.html
@@ -16,5 +16,10 @@
         <a class="Next" href="template6.html">
             Next
         </a>
+
+        <div class="image1"></div>
+        <div class="image2"></div>
+        <div class="image3"></div>
+        
     </body>
 </html>
