--- a/Project2_2/page10_2.html
+++ b/Project2_2/page10_2.html
@@ -12,6 +12,12 @@
             </h1>
         </div>
 
+        <div class="Subheader">
+            <h2>
+                Click the red alternatives box to get more information
+            </h2>
+        </div>
+        
         <a class="Beginning" href="page1.html">
             <img src="Page10/assets/images/Page10_Beginning.png">
         </a>
