--- a/Project2_2/page4.html
+++ b/Project2_2/page4.html
@@ -14,7 +14,7 @@
         
         <div class="Subheader">
             <h2>
-                Click the boxes to reveal the different annual salaries
+                Click the boxes to reveal the different average annual salaries by degree
             </h2>
         </div>
         
