--- a/Project2_2/page5.html
+++ b/Project2_2/page5.html
@@ -14,7 +14,7 @@
         
         <div class="Subheader"> 
             <h2>
-                Click on the dot and slide right for a job and left for a career to see the difference
+                Click on the green dot and slide right for a job and left for a career to see the difference
             </h2>
         </div>
         
