--- a/Project2_2/page9.html
+++ b/Project2_2/page9.html
@@ -61,7 +61,7 @@
 
           <div class="row">
             <div class="column">
-              <img class="demo cursor" src="Page9/assets/images/Page9_Graduation.png" style="width:100%" onclick="currentSlide1(1)" alt="Gradution Rate">
+              <img class="demo cursor" src="Page9/assets/images/Page9_Graduation.png" style="width:100%" onclick="currentSlide1(1)" alt="Graduation Rate">
             </div>
             <div class="column">
               <img class="demo cursor" src="Page9/assets/images/Page9_ratio.png" style="width:100%" onclick="currentSlide1(2)" alt="Student to Teacher Ratio">
