--- a/Project2_2/page3_1.html
+++ b/Project2_2/page3_1.html
@@ -14,10 +14,12 @@
         </div>
         
         <div class="Subheader">
-            Click on the box to reveal how much you will make based on the level of education you chose
+            <h2>
+                Click on the box to reveal how much you will make based on the level of education you chose
+            </h2>
         </div>
         
-        <button class="Reveal1_1"> Your annual salary will be
+        <button class="Reveal1_1"> Your average annual salary will be
         </button>
         <div class="Income">
             $35,256
