--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <body>
             <h1> Selena's Landing Page</h1>
-            <h4> Project 1</h4>
+            <h4> 
+                Project 1
+            </h4>
             <p>
                 <a href= "Project1_3/index.html"> HTML + CSS </a>
             </p>
@@ -11,7 +13,7 @@
                 Project 2
             </h4>
             <p>
-                <a href="Project2_2/page1.html">
+                <a href="Project2_Final/page1.html">
                     Interactive Website
                 </a>
             </p>
