--- a/Project3/project1.html
+++ b/Project3/project1.html
@@ -33,7 +33,7 @@
         </div>
         
         <div class="ProjectDescription">
-            This project was the first of many in my journey through my concentration in visual interface design. The purpose of this project was to see everyday objects through a new perspective. We started by finding objects that seemed out of place, then took it a step further by finding the alphabet within those objects, and, lastly, chose one of these objects to make an alphabet out of.
+            This project was the first of many in my journey through my concentration in visual interface design. The purpose of this project was to see everyday objects through a new perspective. We started by finding objects that seemed out of place, then took it a step further by finding the alphabet within those objects, and, lastly, chose one of these objects to make an alphabet out of. The process you will see below looks at each of those steps and how it, ultimately, got me to where the project ended.
         </div>
         
         <div class="Process">
