--- a/Project3/works.html
+++ b/Project3/works.html
@@ -53,7 +53,7 @@
         </div>
         
         <div class="Story">
-            Data Tells the Story
+            Storytelling with Data
         </div>
         
         <div class="StoryBox"></div>
