--- a/Project3/works.html
+++ b/Project3/works.html
@@ -70,6 +70,9 @@
         </div>
         
         <div class="Bottom">
+            <a href="homepage.html">Home</a>
+            <a href="works.html">Work</a>
+            <a href="about.html">About</a>
         </div>
         
         <script>
