--- a/Project3/about.html
+++ b/Project3/about.html
@@ -110,7 +110,13 @@
                 </div>
             </div>
         </div>
-        <div class="Back">  
+        <div class="Bottom"> 
+            <a href="homepage.html">
+            Home</a>
+            <a href="works.html">
+            Work
+            </a>
+            <a href="about.html">About</a>
         </div>
         
         <script>
