--- a/Project3/project2.html
+++ b/Project3/project2.html
@@ -100,7 +100,14 @@
             Deep Wounds: The Final Product
         </div>
         
-        <div class="Box"></div>
+        <div class="Box">
+            <a href="homepage.html"> </a>
+            <a href=homepage.html>Home</a>
+            <a href="works.html">
+                Work
+            </a>
+            <a href="about.html">About</a>
+        </div>
         
         <script>
         function openNav() {
