--- a/Project3/project3.html
+++ b/Project3/project3.html
@@ -124,7 +124,14 @@
             Diversity at the Top 20 Universities
         </div>
         
-        <div class="Bar"></div>
+        <div class="Bar">
+            <a href="homepage.html"> </a>
+            <a href=homepage.html>Home</a>
+            <a href="works.html">
+                Work
+            </a>
+            <a href="about.html">About</a>
+        </div>
         
         <script>
         function openNav() {
