--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 Project 3 Wireframe
             </h4>
             <p>
-                <a href="Project3/Wireframes/homepage.html">Portfolio Wireframe</a>
+                <a href="Project3/Wireframes/homepage.html"> Wireframe Homepage</a>
+                
+                <br><a href="Project3/Wireframes/projectpage.html">Wireframe Project Page</a>
             </p>
             
             <h4>
